<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="horizontal">

	<TableRow
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/contact_name_caption"
			style="@style/ContactItemCaption"
			android:layout_width="100dp"
			android:layout_height="wrap_content"
			android:text="@string/contact_name" />

		<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/text_view_name"
			style="@style/ContactItemValue"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			tools:text="Иван-лама" />
	</TableRow>

	<TableRow
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/contact_email_caption"
			style="@style/ContactItemCaption"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/contact_email" />

		<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/text_view_email"
			style="@style/ContactItemValue"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			tools:text="jo@human.com" />
	</TableRow>

	<TableRow
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/contact_phone_caption"
			style="@style/ContactItemCaption"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/contact_phone" />

		<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/text_view_phone"
			style="@style/ContactItemValue"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			tools:text="+997755886" />
	</TableRow>

	<TableRow
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<androidx.appcompat.widget.AppCompatTextView
			android:id="@+id/contact_location"
			style="@style/ContactItemCaption"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:text="@string/contact_location" />

		<androidx.appcompat.widget.AppCompatButton
			android:id="@+id/button_edit_location"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:text="@string/details_map_button_caption" />
	</TableRow>

	<ProgressBar
		android:id="@+id/progress_bar_contact_details"
		style="?android:progressBarStyle"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_gravity="center"
		android:indeterminate="true"
		android:visibility="gone" />
</TableLayout>